syntax = "proto3";
package dataset;

message Channel {
  reserved 6, 8 to 11;
  int64 id = 1;
  string name = 2;
  string description = 3;
  string foo = 4;
  int32 age = 5;

  message A { int32 id = 1; }

  A msg = 44;
}

message Display {
  reserved "a_map";
  reserved 3;
  int32 width = 1;
  int32 height = 2;

  message A {
    reserved 2;
    int64 id = 1;
  }

  A msg = 44;

  map<string, int32> a_map = 3;
}

// @protolock:skip
message NextRequest {}
message PreviousRequest {}

service ChannelChanger {
  rpc Next(stream NextRequest) returns (Channel);
  rpc Previous(PreviousRequest) returns (stream Channel);
}
